# Backend

./: .cursorrules  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  dockerfile  pyproject.toml  pytest.ini  req.txt  test_api.py
.cursor/rules/: ins.mdc  rule.mdc
docs/: index.html  openapi.json
scripts/: export_swagger.py
scripts/win/: clean.ps1  export_swagger.ps1  run.ps1
src/: debug_migration.py  main.py  settings.yaml
src/boostrap/: app.py  middleware.py  migration.py  register.py
src/boostrap/seeds/: __init__.py  bottle_seed.py
src/bootstrap/: __init__.py  db.py  route.py
src/config/: db_dev.py
src/constant/: role.py
src/constant/message/: auth_message.py  global_message.py
src/controller/: auth_controller.py  bottle_controller.py
src/entity/: bottle_entity.py  message_entity.py  user_entity.py
src/features/: __init__.py
src/features/api/: __init__.py  api_route.py  api_service.py
src/features/auth/: __init__.py  auth_constants.py  auth_entity.py  auth_helper.py  auth_message.py  auth_route.py  auth_schema.py  auth_service.py
src/features/chat/: __init__.py  chat_entity.py  chat_route.py  chat_schema.py  (+1 more)
src/helper/: auth_helper.py  db_session.py  jwt_helper.py  settings_helper.py
src/middleware/: api_auth_middleware.py  health_admin_middleware.py
src/repository/: BottleRepository.py  UserRepository.py
src/route/: auth_route.py  bottle_route.py
src/service/: auth_service.py  bottle_service.py  redis_service.py
swagger/: openapi.json
test/: conftest.py
test/controller/: test_auth_controller.py
(+47 files in other folders)
