[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "MK",email = "khang.tranminh047@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.122.0,<0.123.0)",
    "uvicorn (>=0.31.0,<0.32.0)",
    "redis-om (>=0.3.5,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "httpx (>=0.27.0,<0.28.0)"
]

[tool.poetry]
package-mode = false
